# Travel_Agent_Bot

./: .gitignore  Readme.md  agent.py  datapreprocessing.py  embeddings.npy  embeddings.py  main.py  mcp_config.json  memory.py  pyproject.toml  requirements.txt  test fie.py  test4.py  travel_agnet.py
Data/: Travel_Dataset_Custom.csv
frontend/app/: page.tsx
frontend/components/: chat.tsx
